cleaned up homepage, fixed header clipping, wrote blog post about amoti

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -202,6 +202,18 @@ a.pure-button-primary {
  * -- CONTENT STYLES --
  * This represents the content area (everything below the blue section)
  */
+
+ .content-wrapper-normal {
+    position: absolute;
+    top: 3.9em;
+    left: 0%;
+    width: 100%;
+    min-height: 12%;
+    z-index: 2;
+    background: white;
+
+}
+
 .content-wrapper {
     /* These styles are required for the "scroll-over" effect */
     position: absolute;
